Fix spacing of bottom footer on interior. Add lazy loading images to home.

--- a/wp-content/themes/abt-core-custom/css/style.css
+++ b/wp-content/themes/abt-core-custom/css/style.css
@@ -1026,8 +1026,8 @@ body {
   @media screen and (min-width: 960px) {
     .content-container {
       padding: 0;
-      margin-bottom: 56px;
-      margin-bottom: 3.5rem;
+      margin-bottom: 92px;
+      margin-bottom: 5.75rem;
       display: block; }
       .content-container::after {
         clear: both;
